made all supplementary figures

--- a/GW_Zchromosome_analysis.qmd
+++ b/GW_Zchromosome_analysis.qmd
@@ -302,6 +302,43 @@ save("Figure2_from_Julia_test.png", plotInfo[1], px_per_unit = 2.0) # the last b
 
 ```
 
+
+#### Now make one of all individuals, for the supplement
+
+```{julia}
+groups_to_plot_all = ["vir","vir_misID","vir_S","nit", "lud_PK", "lud_KS", "lud_central", "lud_Sath", "lud_ML","troch_west","troch_LN","troch_EM","obs","plumb_BJ","plumb","plumb_vir"]
+group_colors_all = ["blue","blue","turquoise1","grey","seagreen4","seagreen3","seagreen2","olivedrab3","olivedrab2","olivedrab1","yellow","gold","orange","pink","red","purple"];
+
+groups = ["vir","lud_PK","troch_LN","obs","plumb"] # for purpose of calculating pairwise Fst and Fst_group (to determine SNPs)   
+plotGroups = groups_to_plot_all 
+plotGroupColors = group_colors_all
+group1 = "vir"   # these groups will determine the color used in the graph
+group2 = "plumb"
+groupsToCompare = "Fst_among" #"vir_plumb" 
+Fst_cutoff = 0.9
+missingFractionAllowed = 0.2  # only show SNPs with less than this fraction of missing data among individuals
+
+# Calculate allele freqs and sample sizes (use column Fst_group)
+freqs, sampleSizes = getFreqsAndSampleSizes(genotypes_gwZ_SNPfiltered_with_missing, ind_with_metadata_indFiltered_sex_chrZcleaned.Fst_group, groups)
+println("Calculated population allele frequencies and sample sizes")
+
+Fst, FstNumerator, FstDenominator, pairwiseNamesFst = getFst(freqs, sampleSizes, groups; among=true)  # set among to FALSE if no among Fst wanted (some things won't work without it) 
+println("Calculated Fst values")
+
+chr = "gwZ"
+regionInfo = chooseChrRegion(pos_SNP_filtered_chZcleaned, chr; positionMin=1, positionMax=scaffold_lengths[chr]) # this gets the maximum position for the chromosome
+
+plotInfo = plotGenotypeByIndividual(groupsToCompare, Fst_cutoff, 
+    missingFractionAllowed, regionInfo,
+    pos_SNP_filtered_chZcleaned, Fst, pairwiseNamesFst, 
+    genotypes_gwZ_SNPfiltered_with_missing, ind_with_metadata_indFiltered_sex_chrZcleaned, freqs, 
+    plotGroups, plotGroupColors;
+    indFontSize=4, figureSize=(1200,1600),
+    plotTitle = "");
+# plotInfo contains a tuple with: (f, plottedGenotype, locations, plottedMetadata)
+save("Fig_gwZ_GBI_allinds_from_Julia.png", plotInfo[1], px_per_unit = 2.0)
+```
+
 ## Just west side
 
 One of the nitidus is a female, so including both sexes here, and no additional filtering for missing data:
