--- a/GW_PCAplots.qmd
+++ b/GW_PCAplots.qmd
@@ -455,8 +455,197 @@ scaffold = "15"
 PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
                             baseName, tagName, scaffold;
                             flipPC1=true, flipPC2=false, showTitle=false)
-if true  #set to true to save
+if false  #set to true to save
     filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+```{julia}
+scaffold = "17"    
+PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
+                            baseName, tagName, scaffold;
+                            flipPC1=true, flipPC2=true, showTitle=false)
+if false  #set to true to save
+    filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+```{julia}
+scaffold = "18"    
+PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
+                            baseName, tagName, scaffold;
+                            flipPC1=true, flipPC2=true, showTitle=false)
+if false  #set to true to save
+    filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+```{julia}
+scaffold = "19"    
+PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
+                            baseName, tagName, scaffold;
+                            flipPC1=true, flipPC2=true, showTitle=false)
+if false  #set to true to save
+    filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+```{julia}
+scaffold = "20"    
+PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
+                            baseName, tagName, scaffold;
+                            flipPC1=true, flipPC2=true, showTitle=false)
+if false  #set to true to save
+    filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+```{julia}
+scaffold = "21"    
+PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
+                            baseName, tagName, scaffold;
+                            flipPC1=true, flipPC2=true, showTitle=false)
+if false  #set to true to save
+    filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+```{julia}
+scaffold = "22"    
+PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
+                            baseName, tagName, scaffold;
+                            flipPC1=true, flipPC2=false, showTitle=false)
+if false  #set to true to save
+    filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+```{julia}
+scaffold = "23"    
+PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
+                            baseName, tagName, scaffold;
+                            flipPC1=true, flipPC2=true, showTitle=false)
+if false  #set to true to save
+    filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+```{julia}
+scaffold = "24"    
+PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
+                            baseName, tagName, scaffold;
+                            flipPC1=true, flipPC2=true, showTitle=false)
+if false  #set to true to save
+    filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+```{julia}
+scaffold = "25"    
+PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
+                            baseName, tagName, scaffold;
+                            flipPC1=true, flipPC2=true, showTitle=false)
+if false  #set to true to save
+    filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+```{julia}
+scaffold = "26"    
+PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
+                            baseName, tagName, scaffold;
+                            flipPC1=true, flipPC2=true, showTitle=false)
+if false  #set to true to save
+    filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+```{julia}
+scaffold = "27"    
+PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
+                            baseName, tagName, scaffold;
+                            flipPC1=true, flipPC2=true, showTitle=false)
+if false  #set to true to save
+    filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+```{julia}
+scaffold = "28"    
+PCAmodel = plotOneScaffoldPCA(groups_to_plot_PCA, group_colors_PCA,    
+                            baseName, tagName, scaffold;
+                            flipPC1=true, flipPC2=true, showTitle=false)
+if false  #set to true to save
+    filename = string("Figure_gw", scaffold, "_PCA_allInds_from_Julia.png")
+    save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
+    println("Saved ", filename)
+end
+```
+
+# Make Z chromosome PCA:
+
+```{julia}
+regionText = "chrgwZ_cleaned"
+filename = string(baseName, tagName, regionText, ".KNNimputedMissing.jld2")
+imputed_genos = load(filename, "imputed_genos")
+ind_with_metadata_indFiltered = load(filename, "ind_with_metadata_indFiltered")
+pos_SNP_filtered_region = load(filename, "pos_SNP_filtered_region")
+println(string("Loaded ",filename))
+println(string(regionText, ": ", size(imputed_genos,2), " SNPs from ", size(imputed_genos,1), " individuals"))
+flipPC1 = true
+flipPC2 = true
+PCAmodel = plotPCA(imputed_genos, ind_with_metadata_indFiltered, 
+        groups_to_plot_PCA, group_colors_PCA; 
+        sampleSet = "greenish warblers", regionText=regionText,
+        flip1 = flipPC1, flip2 = flipPC2,
+        lineOpacity = 0.7, fillOpacity = 0.6,
+        symbolSize = 14, showTitle = false,
+        xLabelText = string("Chromosome Z PC1"), yLabelText = string("Chromosome Z PC2"),
+        showPlot = true)
+
+totalObservationVariance = var(PCAmodel.model) 
+PC1_variance, PC2_variance = principalvars(PCAmodel.model)[1:2]
+PC1_prop_variance = PC1_variance / totalObservationVariance
+PC2_prop_variance = PC2_variance / totalObservationVariance
+println("PC1 explains ", 100*PC1_prop_variance, "% of the total variance.
+PC2 explains ", 100*PC2_prop_variance, "%.")
+        
+# add position of reference genome
+refGenomePCAposition = predict(PCAmodel.model, zeros(size(imputed_genos, 2)))
+flipPC1 && (refGenomePCAposition[1] *= -1)  # this flips PC1 if flipPC1 = true
+flipPC2 && (refGenomePCAposition[2] *= -1)  # same for PC2
+CairoMakie.scatter!(refGenomePCAposition[1], refGenomePCAposition[2], marker = :diamond, color="black", markersize=14, strokewidth=0.5)
+try
+    display(PCAmodel.PCAfig)
+catch
+    println("NOTICE: Figure for ", regionText, " could not be shown due to an unknown error.")
+end
+if true  #set to true to save
+    filename = string("Figure_gwZ_PCA_allInds_from_Julia.png")
     save(filename, PCAmodel.PCAfig, px_per_unit = 2.0)
     println("Saved ", filename)
 end
